[package]
name = "mdbook-typst-math"
version = "0.2.0"
edition = "2021"
authors = [
    "duskmoon (Campbell He) <kp.campbell.he@duskmoon314.com>",
    "sakuraba07 <207140744+sakuraba07@users.noreply.github.com>",
]
description = "An mdbook preprocessor to use typst to render math."
readme = "README.md"
repository = "https://github.com/duskmoon314/mdbook-typst-math"
license = "MIT"
keywords = ["mdbook", "typst", "mdbook-preprocessor"]
include = [
    "/src",
    "/Cargo.toml",
    "/Cargo.lock",
    "/README.md",
    "/LICENSE",
    "/.cargo",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
flate2 = "1.1.5"
fontdb = "0.23.0"
mdbook-preprocessor = "0.5.1"
pulldown-cmark = "0.13.0"
reqwest = { version = "0.12.24", default-features = false, features = [
    "blocking",
    "rustls-tls",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
tar = "0.4.44"
time = { version = "0.3.44", features = ["local-offset"] }
typst = "0.14.1"
typst-assets = { version = "0.14.1", features = ["fonts"], optional = true }
typst-svg = "0.14.1"

[features]
default = ["embed-fonts"]

# Embed fonts from typst-assets
embed-fonts = ["typst-assets"]
