[package]
name = "mdbook-typst-math"
version = "0.3.0"
edition = "2021"
authors = [
    "duskmoon (Campbell He) <kp.campbell.he@duskmoon314.com>",
    "sakuraba07 <207140744+sakuraba07@users.noreply.github.com>",
]
description = "An mdbook preprocessor to use typst to render math."
readme = "README.md"
repository = "https://github.com/duskmoon314/mdbook-typst-math"
license = "MIT"
keywords = ["mdbook", "typst", "mdbook-preprocessor"]
include = [
    "/src",
    "/Cargo.toml",
    "/Cargo.lock",
    "/README.md",
    "/LICENSE",
    "/.cargo",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
codespan-reporting = "0.13.1"
flate2 = "1.1.8"
fontdb = "0.23.0"
mdbook-preprocessor = "0.5.2"
pulldown-cmark = "0.13.0"
reqwest = { version = "0.13.1", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
tar = "0.4.44"
time = { version = "0.3.45", features = ["local-offset"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
typst = "0.14.2"
typst-assets = { version = "0.14.2", features = ["fonts"], optional = true }
typst-html = "0.14.2"
typst-svg = "0.14.2"

[features]
default = ["embed-fonts"]

# Embed fonts from typst-assets
embed-fonts = ["typst-assets"]
